src/test/deca/syntax/valid/inst/test_inst_print_with_parent.deca
// Description:
//    test de programme syntaxiquement correct
//
// Resultats:
//    3
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 1, b = 2;
    print(a + b);
}