src/test/deca/syntax/invalid/decl_param/test_decl_param_without_closing_par.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// missing ')' at '{'
// Historique:
//    cree le 01/01/2024

class A {   
    void f(int a {
        print("a = " + a);
    }
}
